--- a/TMessagesProj/src/main/res/values/strings.xml
+++ b/TMessagesProj/src/main/res/values/strings.xml
@@ -1510,6 +1510,7 @@
     <string name="ThemeUrl">Theme Link</string>
     <string name="BubbleRadius">Message corners</string>
     <string name="PreviewMessages">Messages appearance</string>
+    <string name="DialogCellAvatarRadius">Chat avatar corners</string>
     <string name="ChatList">Chat list view</string>
     <string name="ChatListDefault">Two lines</string>
     <string name="ChatListExpanded">Three lines</string>
