Small fixes for variable roundness chat avatar and add element in chat menu

--- a/TMessagesProj/src/main/res/values/strings.xml
+++ b/TMessagesProj/src/main/res/values/strings.xml
@@ -2469,6 +2469,7 @@
     <string name="ShowInChat">Show in chat</string>
     <string name="StopDownload">Stop downloading</string>
     <string name="SaveToGallery">Save to gallery</string>
+    <string name="SaveMessage">Save Message</string>
     <string name="Of">%1$d of %2$d</string>
     <string name="Gallery">Gallery</string>
     <string name="AllPhotos">All photos</string>
